--- a/docs/01.products_requirements.md
+++ b/docs/01.products_requirements.md
@@ -7,7 +7,8 @@
 ### 사용하게 될 기술: 
 React
 
-### 문서 작성자: 오서진
+### 문서 작성자: 
+오서진
 
 ## 📝 고객 요구사항 정리
 1. 모바일 환경 맞춤 UI
@@ -29,7 +30,7 @@ React
   - `<ProductCard />`
   - 이미지*, 브랜드명, 설명, 가격, 담기버튼
 - 담기 버튼
-  - `<AddCardButton />`
+  - `<AddCartButton />`
   - 클릭 : 
     - 장바구니에 추가
     - 담기 버튼 비활성화
