수정 : function 문법에서 class(React.Component) 문법으로 변경

--- a/docs/02.payments_requirements.md
+++ b/docs/02.payments_requirements.md
@@ -18,12 +18,12 @@ React
 5. 카드 유효기간에는 숫자 범위 제한
 
 ## 📋 기능 목록
-<상품목록 페이지>
+### <상품목록 페이지>
 - 구매 버튼
   - `<PaymentButton/>`
   - 클릭 : 카드 목록 화면으로 이동
 
-<나의 카드 목록 페이지>
+### <나의 카드 목록 페이지>
 - 보유 카드
   - `<RegistredCard/>`
   - 8자리 카드 정보, 소유자 이름, 유효기간 노출
@@ -32,7 +32,7 @@ React
   - `<NewCard/>`
   - 클릭 : 카드 추가 화면으로 이동
 
-<카드 추가 페이지>
+### <카드 추가 페이지>
 - 카드 이미지
   - `<CardImage/>`
   - 초기값 : 카드번호 없음, NAME, MM/YY
@@ -64,5 +64,3 @@ React
   - 모두 숨김처리
 - 작성 완료 버튼
   - `<SubmitButton/>`
- 
-
