생성 : 문서 작성 및 기능 일부 수정

--- a/docs/02.payments_docs.md
+++ b/docs/02.payments_docs.md
@@ -1,12 +1,12 @@
-# 상품 목록 페이지 프로젝트
+# 결제 모듈 프로젝트
 
 ## 프로젝트 개요
 
-- 이 상품 목록 페이지는 고객에게 다양한 상품을 표시하고, 상품을 선택하여 장바구니에 추가할 수 있는 기능을 제공합니다.
+- 이 결제 모듈은 카드를 등록하고 결제할 수 있게 도와주는 모달 컴포넌트입니다.
 - 참여한 팀원 : 오서진
 
 ## 개발 환경
-React 17.0, JavaScript ES6
+React 17.0, JavaScript ES6, React useForm
 
 ## 설치 및 실행 방법
 ```
@@ -14,8 +14,9 @@ npm start
 ```
 
 ## 컴포넌트 구조
-- `ProductList`: 상품 목록을 보여줍니다.
-- `ProductCard`: 각 상품의 정보를 보여줍니다.
+- `AddPayments`: 새로운 카드 정보를 입력받습니다.
+- `Payments`: 사용자의 카드 목록을 보여줍니다.
+- `CardForm`: 카드모양에 카드번호, 유효기간, 소유자를 보여줍니다.
 
 ## 테스트 방법
 ```
